<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Redmi Note 4</string>
    <string name="advanced_settings">Device Features</string>
    <string name="disable_hw_keys">Disable capacitive keys</string>
    <string name="disable_hw_keys_summary">Disables hardware navigation buttons</string>
    <string name="navigation_bar_show_title">Show navigation bar</string>
    <string name="navigation_bar_show_summary">Enable navigation bar</string>
    <string name="navigation_title">Navigation</string>
    <string name="button_backlight_title">Button backlight</string>
    <string name="button_backlight_summary">Configure brightness of capacitive buttons</string>
    <string name="misc">Misc.</string>
    <string name="double_tap_wake_title">Enable double tap to wake</string>
    <string name="double_tap_wake_summary">Control double tap to wake</string>

    <!-- Dirac -->
    <string name="audio_title">Audio</string>

    <!-- Dirac settings -->
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>

    <!-- Display -->
    <string name="display_title">Display</string>
    <string name="display_calibration_title">Display calibration</string>
    <string name="display_calibration_summary">Calibrate display colours using KCAL</string>
    <string name="kcal_title">Display colours</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Contrast</string>

</resources>
